# fileglancer-janelia

./: .gitignore  README.md  pyproject.toml  run_update_db.sh
docs/: SystemdTimer.md
fileglancer_janelia/: __init__.py  update_db.py  wiki.py
playwright/: .env.example  data-link-operations.spec.js  global-setup.js  global-teardown.js  package-lock.json  package.json  playwright.config.js  ssh-keys.spec.js  utils.js
systemd/: fileglancer-update.service  fileglancer-update.timer
tests/: test_database.py
