[project]
name = "fileglancer-janelia"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Konrad Rokicki", email = "rokickik@janelia.hhmi.org" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "fileglancer-central",
    "atlassian-python-api >=3.41",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.tasks]
dev-install = "pip install -e ."
update-db = { cmd = "python -m fileglancer_janelia.update_db" }

[tool.pixi.dependencies]
python = "3.12.*"
pip = ">=25.0.1,<26"
